apps/production/headless/depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless
  namespace: ginny-prod
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: headless-depl
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headless
      version: v1
  template:
    metadata:
      labels:
        app: headless
        version: v1
    spec:
      containers:
        - name: headless
          ports:
            - containerPort: 1337
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          image: ghcr.io/ginnyvt/headless-strapi:v.1.0.0 # {"$imagepolicy": "ginny-prod:headless"}
          imagePullPolicy: Always
