apps/production/headless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless
  namespace: ginny-prod
spec:
  selector:
    app: headless
  ports:
    - name: http
      protocol: TCP
      port: 1337
      targetPort: 1337
